--- a/climate-map/index.html
+++ b/climate-map/index.html
@@ -200,7 +200,7 @@
     
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <!-- <script src="http://maps.google.com/maps/api/js?v=3.6&libraries=drawing&sensor=false&key=AIzaSyDi5fOTYct9-gZR2np0TXHWwNUZBrXz2o0" type="text/javascript"></script> -->
-    <script src="http://maps.google.com/maps/api/js?v=3.6&libraries=drawing&sensor=false&key=AIzaSyDdAFrv-8CTRpa48MRjh5gH9qoD5JoqdIc" type="text/javascript"></script>    
+    <script src="http://maps.google.com/maps/api/js?v=3&libraries=drawing&key=AIzaSyDdAFrv-8CTRpa48MRjh5gH9qoD5JoqdIc" type="text/javascript"></script>    
 
     <script src="Scripts/jquery.autocomplete.js" type="text/javascript"></script>
     <script src="Scripts/jquery.colorbox.js" type="text/javascript"></script>    
@@ -224,7 +224,7 @@
         }
         //google analytics
         var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-38876529-1']);
+        _gaq.push(['_setAccount', 'UA-10001649-4']);
         _gaq.push(['_trackPageview']);
 
         (function () {
